# cribbage_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsOLD.txt  README.md  cmake-variants.yaml  cribbage_cpp.workspace  cribbage_cpp.workspace.layout  minimax.dot  minimax_main.cpp  minimax_main.h  play_main.cpp  test_card_utils.cpp  test_default_player.cpp  test_main.cpp  test_play_card.cpp  test_score_shew.cpp  testcoverage.sh
build_linux_console/: CMakeCache.txt  Makefile  cmake_install.cmake  play_main  test_main
build_linux_console/cribbage_core/: Makefile  cmake_install.cmake
cribbage_core/: CMakeLists.txt  card_utils.cpp  card_utils.h  cribbage_core.cpp  cribbage_core.h  cribbage_core.ino  cribbage_cpp.h  cribbage_player.cpp  cribbage_player.h
cribbage_cpp/: card_utils.cpp  card_utils.h  cribbage_cpp.cbp  cribbage_cpp.cpp  cribbage_cpp.depend  cribbage_cpp.h  cribbage_cpp.ino  cribbage_cpp.layout  cribbage_player.cpp  cribbage_player.h
cribbage_cpp_test/: cribbage_cpp_test.cbp  cribbage_cpp_test.depend  cribbage_cpp_test.layout  main.cpp
images/: dottest.dot  dottest2.dot
plat_arduino_serial/: CMakeLists.txt  plat_io.cpp  plat_io.h  plat_minimax_main.cpp  plat_minimax_main.h  plat_play_main.cpp
plat_linux_console/: CMakeLists.txt  plat_io.cpp  plat_io.h  plat_minimax_main.cpp  plat_minimax_main.h  plat_play_main.cpp
